--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
@@ -9,7 +9,7 @@
 
     <Grid>
         <!--buttons-->
-        <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Grid x:Name="buttonsPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Gray">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -18,10 +18,10 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Row="0" Grid.Column="0" Content="单张贴图" Width="120" Height="120" Margin="20" Click="singlePic_Click"/>
-            <Button Grid.Row="0" Grid.Column="1" Content="多张拼图" Width="120" Height="120" Margin="20" Click="multiPic_Click"/>
-            <Button Grid.Row="1" Grid.Column="0" Content="精品屋" Width="120" Height="120" Margin="20" Click="boutique_Click"/>
-            <Button Grid.Row="1" Grid.Column="1" Content="更多功能" Width="120" Height="120" Margin="20" Click="more_Click"/>
+            <Button Grid.Row="0" Grid.Column="0" Content="单张贴图" Width="120" Height="120" Margin="20" Background="SkyBlue" Click="singlePic_Click"/>
+            <Button Grid.Row="0" Grid.Column="1" Content="多张拼图" Width="120" Height="120" Margin="20" Background="Orange" Click="multiPic_Click"/>
+            <Button Grid.Row="1" Grid.Column="0" Content="精品屋" Width="120" Height="120" Margin="20" Background="Salmon" Click="boutique_Click"/>
+            <Button Grid.Row="1" Grid.Column="1" Content="更多功能" Width="120" Height="120" Margin="20" Background="SeaGreen" Click="more_Click"/>
         </Grid>
     </Grid>
 </Page>
