--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<Page xmlns:controls="using:MeiTuTieTie.Controls" 
     x:Class="MeiTuTieTie.Pages.OperationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,5 +9,8 @@
 
     <Grid>
         <TextBlock Text="Operation Page" FontSize="32"/>
+        <Grid x:Name="stagePanel" Background="Gray" Margin="20,50,20,20">
+            <controls:SpriteControl x:Name="sprite1"/>
+        </Grid>
     </Grid>
 </Page>
