--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Controls/SpriteControl - Copy.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Controls/SpriteControl - Copy.xaml
@@ -8,55 +8,51 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
-    >
+    HorizontalAlignment="Center" VerticalAlignment="Center">
 
-    <Grid x:Name="layoutRoot" Background="White">
-        
-        <Grid x:Name="outerPanel" RenderTransformOrigin="0.5,0.5" 
-              MaxWidth="240" MaxHeight="400" HorizontalAlignment="Center" VerticalAlignment="Center">
+    <Grid x:Name="layoutRoot">
+        <Grid x:Name="contentPanel" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
-                <CompositeTransform x:Name="outerTransform" />
+                <CompositeTransform x:Name="transform" />
             </Grid.RenderTransform>
 
-            <Grid x:Name="innerPanel" RenderTransformOrigin="0.5,0.5">
+            <Grid x:Name="innerContentPanel" RenderTransformOrigin="0.5,0.5">
                 <Grid.RenderTransform>
                     <CompositeTransform x:Name="innerTransform" />
                 </Grid.RenderTransform>
-                
                 <Image x:Name="image" Stretch="Uniform" Source="{Binding}"
                    CacheMode="BitmapCache" 
                    ManipulationMode="TranslateX,TranslateY,Rotate,Scale"
                    ManipulationDelta="image_ManipulationDelta"
-                       LayoutUpdated="image_LayoutUpdated"/>
+                   ManipulationCompleted="image_ManipulationCompleted"/>
 
-                <Ellipse x:Name="centerPoint" Fill="Red"
-                       VerticalAlignment="Center" HorizontalAlignment="Center"
-                       Width="1" Height="1"/>
-                
                 <Grid x:Name="handle" RenderTransformOrigin="0.5,0.5"
                      VerticalAlignment="Bottom" HorizontalAlignment="Right"
-                     Width="48" Height="48" Margin="0,0,-24,-24">
+                     Width="48" Height="48" Margin="0,0,-24,-24"
+                     ManipulationMode="TranslateX,TranslateY"
+                     ManipulationDelta="handle_ManipulationDelta"
+                     ManipulationCompleted="handle_ManipulationCompleted">
                     <Grid.RenderTransform>
                         <CompositeTransform x:Name="handleTransform"/>
                     </Grid.RenderTransform>
                     <Ellipse Fill="LightBlue" Width="48" Height="48"/>
-                    <Ellipse x:Name="handlePoint" Fill="Red" Width="1" Height="1"/>
                 </Grid>
-                
+
+                <Ellipse x:Name="centerPoint" Fill="Red"
+                       VerticalAlignment="Center" HorizontalAlignment="Center"
+                       Width="1" Height="1"/>
             </Grid>
 
-        </Grid>
+            <Ellipse x:Name="handleGhost" Fill="Red"
+                       VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                       Width="1" Height="1" 
+                       RenderTransformOrigin="0.5,0.5">
+                <Ellipse.RenderTransform>
+                    <CompositeTransform x:Name="handleGhostTransform"/>
+                </Ellipse.RenderTransform>
+            </Ellipse>
 
-        <Ellipse x:Name="handleGhost" Fill="#80ff0000"
-                       VerticalAlignment="Top" HorizontalAlignment="Left"
-                       Width="48" Height="48" Margin="-24,-24,0,0"
-                       RenderTransformOrigin="0.5,0.5"
-                     ManipulationMode="TranslateX,TranslateY"
-                     ManipulationDelta="ghost_ManipulationDelta">
-            <Ellipse.RenderTransform>
-                <CompositeTransform x:Name="ghostTransform"/>
-            </Ellipse.RenderTransform>
-        </Ellipse>
+        </Grid>
 
     </Grid>
 
