--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Controls/SpriteControl.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Controls/SpriteControl.xaml
@@ -10,7 +10,10 @@
     d:DesignWidth="400"
     >
 
-    <Grid x:Name="layoutRoot">
+    <Grid x:Name="layoutRoot" RenderTransformOrigin="0.5,0.5">
+    	<Grid.RenderTransform>
+    		<CompositeTransform/>
+    	</Grid.RenderTransform>
 
         <Grid x:Name="contentPanel" RenderTransformOrigin="0.5,0.5" 
               MaxWidth="150" MaxHeight="200" 
