--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Controls/SpriteControl.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Controls/SpriteControl.xaml
@@ -55,6 +55,13 @@
 
         </Grid>
         
+        <Border x:Name="border" Visibility="Collapsed"
+                BorderThickness="1" BorderBrush="Orange" RenderTransformOrigin="0.5,0.5">
+            <Border.RenderTransform>
+                <CompositeTransform x:Name="borderTransform" />
+            </Border.RenderTransform>
+        </Border>
+        
         <Grid x:Name="removeButton" Visibility="Collapsed"
               VerticalAlignment="Top" HorizontalAlignment="Left"
               Width="48" Height="48" Margin="-24,-24,0,0"
