--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
@@ -8,7 +8,10 @@
     mc:Ignorable="d">
 
     <Grid>
-        <Grid x:Name="stagePanel" Background="Wheat" Margin="0"/>
+        <Grid>
+            <Grid x:Name="stageBackground" Background="Wheat" PointerPressed="stageBackground_PointerPressed"/>
+            <Grid x:Name="stage" />
+        </Grid>
 
         <Button Content="OK" Click="OK_Click" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Margin="12,0,12,0"/>
     </Grid>
