--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.Shared/App.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.Shared/App.xaml
@@ -4,4 +4,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MeiTuTieTie">
 
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Style/AppStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
+
 </Application>
