--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
@@ -1,8 +1,8 @@
-﻿<Page xmlns:controls="using:MeiTuTieTie.Controls" 
+﻿<Page 
     x:Class="MeiTuTieTie.Pages.OperationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MeiTuTieTie.Pages"
+    xmlns:controls="using:MeiTuTieTie.Controls" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
