--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/ThemeDetailPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/ThemeDetailPage.xaml
@@ -1,15 +1,13 @@
-﻿<UserControl
-    x:Class="MeiTuTieTie.Controls.ThemeDetailView"
+﻿<Page 
+    x:Class="MeiTuTieTie.Pages.ThemeDetailPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MeiTuTieTie.Controls"
+    xmlns:controls="using:MeiTuTieTie.Controls" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="711"
-    d:DesignWidth="400">
+    mc:Ignorable="d">
 
-    <Grid Background="White">
+    <Grid x:Name="rootGrid" Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -43,4 +41,4 @@
         </ScrollViewer>
     </Grid>
 
-</UserControl>
+</Page>
