--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
@@ -36,4 +36,11 @@
         <Setter Property="Foreground" Value="#ff808080"/>
     </Style>
 
+    <Style x:Key="ThemeDetailPage_Description_Style" TargetType="TextBlock" BasedOn="{StaticResource TextBlockBase}">
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" Value="#ff808080"/>
+    </Style>
+    
+
 </ResourceDictionary>
