--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/BoutiquePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/BoutiquePage.xaml
@@ -8,6 +8,9 @@
     mc:Ignorable="d"
     NavigationCacheMode="Enabled">
 
+    <Page.Resources>
+    </Page.Resources>
+
     <Grid Background="White">
         <ScrollViewer>
             <Grid>
@@ -16,21 +19,24 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <ScrollViewer Style="{StaticResource HorizontalScrollViewer_Style}" Margin="0,10,0,10">
-                    <ItemsControl x:Name="topThemeListBox" Background="Transparent">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <VirtualizingStackPanel/>
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Image Grid.Column="0" Source="{Binding thumbnailUrl}" Stretch="Uniform"
-                                       Height="100" Width="200" Margin="12,0,0,0"/>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </ScrollViewer>
+                <!--<ScrollViewer Style="{StaticResource HorizontalScrollViewer_Style}" Margin="0,10,0,10">
+                </ScrollViewer>-->
+
+                <ItemsControl x:Name="topThemeListBox" Background="Transparent" Margin="0,10,0,10">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Width="{StaticResource ScreenWidthHalf}">
+                                <Image Source="{Binding topThumbnailUrl}" Stretch="Uniform" Margin="12,0,12,0"
+                                       Tapped="theme_Tapped"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
 
                 <ItemsControl Grid.Row="1" x:Name="allThemeListBox" Background="Transparent">
                     <ItemsControl.ItemsPanel>
@@ -57,6 +63,5 @@
                 </ItemsControl>
             </Grid>
         </ScrollViewer>
-
     </Grid>
 </Page>
