--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/BoutiquePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/BoutiquePage.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    NavigationCacheMode="Enabled">
+    NavigationCacheMode="Required">
 
     <Page.Resources>
     </Page.Resources>
@@ -63,6 +63,10 @@
                                 <Image Grid.Column="0" Source="{Binding thumbnailUrl}" Stretch="Uniform"
                                    Height="72" Width="72" Margin="5"/>
                                 <TextBlock Grid.Column="1" Text="{Binding name}" Style="{StaticResource BoutiqueList_ItemText_Style}"/>
+                                <TextBlock Grid.Column="3" Text="免费" Style="{StaticResource BoutiqueList_ItemText_Style}"
+                                           Visibility="{Binding Downloaded, Converter={StaticResource AnythingToVisibilityConverter}, ConverterParameter='neg'}"/>
+                                <TextBlock Grid.Column="3" Text="已下载" Style="{StaticResource BoutiqueList_ItemText_Style}"
+                                           Visibility="{Binding Downloaded, Converter={StaticResource AnythingToVisibilityConverter}}"/>
                             </Grid>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
