--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/MyThemeListPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/MyThemeListPage.xaml
@@ -37,9 +37,9 @@
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <Image Grid.Column="0"
-                                   util:IsoImg.Path="{Binding thumbnail}"
-                                   Stretch="Uniform"
-                                   Height="72" Width="72" Margin="5"/>
+                                   Source="{Binding thumbnail}"
+                                   Stretch="Uniform" Height="72" Width="72" Margin="5"/>
+                            <!--util:IsoImg.Path="{Binding thumbnail}"-->
                             <TextBlock Grid.Column="1" Text="{Binding name}" Style="{StaticResource BoutiqueList_ItemText_Style}"/>
                             <ToggleSwitch Grid.Column="4" VerticalAlignment="Center"/>
                         </Grid>
